--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,159 +1,198 @@
 @Article{muller:perf_eval,
-  author =	{M\"uller, H. and M\"uller, W. and Squire, D. McG. and Marchand-Maillet, S. and Pun, T.},
-  title =	{Performance evaluation in content-based image retrieval: overview and proposals},
-  journal =	{Pattern Recognition Letters},
-  year =	2001,
-  volume =	22,
-  number =	5,
-  month =	apr,
-  pages =	{593--601}
+  	author 		= {M\"uller, H. and M\"uller, W. and Squire, D. McG. and Marchand-Maillet, S. and Pun, T.},
+  	title 		= {Performance evaluation in content-based image retrieval: overview and proposals},
+  	journal 	= {Pattern Recognition Letters},
+  	year 		= 2001,
+  	volume 		= 22,
+  	number 		= 5,
+  	month 		= apr,
+  	pages 		= {593--601},
 }
 
 @TechReport{coil-100,
-  author =		{Nene, S. and Nayar, S. and Murase, H.},
-  title =		{Columbia object image library: Coil-100},
-  number =		{CUCS-006-96},
-  institution =	{Columbia University},
-  year =       	1996,
-  url =			{http://www.cs.columbia.edu/CAVE/research/softlib/coil-100.html}
+  	author 		= {Nene, S. and Nayar, S. and Murase, H.},
+  	title 		= {Columbia object image library: Coil-100},
+  	number 		= {CUCS-006-96},
+  	institution = {Columbia University},
+  	year 		= 1996,
+  	url 		= {http://www.cs.columbia.edu/CAVE/research/softlib/coil-100.html},
 }
 
 @Misc{kerre:vaagmodellen,
-  author =			{Kerre, E. E.},
-  title =			{Vaagheids- en onzekerheidsmodellen},
-  howpublished = 	{Course text},
-  institution =		{Ghent University},
-  year =			2004
+  	author 			= {Kerre, E. E.},
+  	title 			= {Vaagheids- en onzekerheidsmodellen},
+  	howpublished 	= {Course text},
+  	institution 	= {Ghent University},
+  	year 			= 2004,
 }
 
 @PhdThesis{vanderweken:similariteitsmaten,
-  author =	{Van der Weken, D.},
-  title =	{Het gebruik en de constructie van similariteitsmaten in beeldverwerking},
-  school =	{Ghent University},
-  year =	2004,
-  month =	may
+  	author 		= {Van der Weken, D.},
+  	title 		= {Het gebruik en de constructie van similariteitsmaten in beeldverwerking},
+  	school 		= {Ghent University},
+  	year 		= 2004,
+  	month 		= may,
 }
 
 @MastersThesis{victor:aggregatieoperatoren,
-  author =	{Victor, P.},
-  title =	{Toepassingsgerichte studie van aggragatie-operatoren},
-  school =	{Ghent University},
-  year =	2005
+  	author 		= {Victor, P.},
+  	title 		= {Toepassingsgerichte studie van aggragatie-operatoren},
+  	school 		= {Ghent University},
+  	year 		= 2005,
 }
 
 @Misc{veltcamp:cbirs,
-  author =			{Veltkamp, R. C. and Tanase, M.},
-  title =			{Content-Based Image Retrieval Sytems: A Survey},
-  institution = 	{Utrecht University},
-  year =			2002,
-  month = 			oct,
-  howpublished =	{\url{http://www.aa-lab.cs.uu.nl/cbirsurvey/}}
+  	author 			= {Veltkamp, R. C. and Tanase, M.},
+  	title 			= {Content-Based Image Retrieval Sytems: A Survey},
+  	institution 	= {Utrecht University},
+  	year 			= 2002,
+  	month 			= oct,
+  	howpublished 	= {\url{http://www.aa-lab.cs.uu.nl/cbirsurvey/}},
 }
 
 @Article{rui:image_retr,
-  author =		{Rui, Y. and Huang, T. S. and Chang S.},
-  title =		{Image Retrieval: Current Techniques, Promising Directions, and Open Issues},
-  journal =		{Journal of Visual Communication and Image Representation},
-  volume =		10,
-  number =		1,
-  year =		1999,
-  month =		mar,
-  pages =		{39--62}
+  	author 		= {Rui, Y. and Huang, T. S. and Chang S.},
+  	title 		= {Image Retrieval: Current Techniques, Promising Directions, and Open Issues},
+  	journal 	= {Journal of Visual Communication and Image Representation},
+  	volume 		= 10,
+  	number 		= 1,
+  	year 		= 1999,
+  	month 		= mar,
+  	pages 		= {39--62},
 }
 
 @Inproceedings{dewitte:vect_morph_ops,
-	author =	{De Witte, V. and Schulte, S. and Nachtegael, M. and Van der Weken, D. and Kerre, E. E.},
-	title =		{Vector morphological operators for colour images},
-	booktitle =	{International Conference on Image Analysis and Recognition (ICIAR)},
-	year =		2005,
-	month =		sep,
-	address =	{Toronto, Canada}
+	author 		= {De Witte, V. and Schulte, S. and Nachtegael, M. and Van der Weken, D. and Kerre, E. E.},
+	title 		= {Vector morphological operators for colour images},
+	booktitle 	= {International Conference on Image Analysis and Recognition (ICIAR)},
+	year 		= 2005,
+	month 		= sep,
+	address 	= {Toronto, Canada},
 }
 
 @Misc{phillips:beeldverwerking,
-  author =			{Phillips, W.},
-  title =			{Beeldverwerking},
-  howpublished = 	{Course text},
-  institution =		{Ghent University},
-  year =			2004
+  	author 			= {Phillips, W.},
+  	title 			= {Beeldverwerking},
+  	howpublished 	= {Course text},
+  	institution 	= {Ghent University},
+  	year 			= 2004,
 }
 
-@MastersThesis{anoniem:similariteitsmaten_voor_kleurbeelden,
-  author =	{Anoniem},
-  title =	{Similariteitsmaten voor kleurbeelden},
-  school =	{Ghent University},
-  year =	{2005}
+@MastersThesis{debaets:similariteitsmaten_voor_kleurbeelden,
+  	author 		= {De Baets, L.},
+  	title 		= {Similariteitsmaten voor kleurbeelden},
+  	school 		= {Ghent University},
+  	year 		= 2005,
 }
 
 @Article{manjunath:color_and_texture_descriptors,
-  author    = {Manjunath, B. S. and Ohm, J. R. and Vinod, V. V. and Yamada, A.},
-  title     = {Color and Texture descriptors},
-  journal   = {IEEE Transactions on Circuits and Systems for Video Technology},
-  volume    = {11},
-  number    = {6},
-  pages     = {703--715},
-  month     = jun,
-  year      = 2001,
-  url       = {http://vision.ece.ucsb.edu/publications/01IEEEManjunath.pdf}
+  	author    	= {Manjunath, B. S. and Ohm, J. R. and Vinod, V. V. and Yamada, A.},
+  	title     	= {Color and Texture descriptors},
+  	journal   	= {IEEE Transactions on Circuits and Systems for Video Technology},
+  	volume    	= {11},
+  	number    	= {6},
+  	pages     	= {703--715},
+  	month     	= jun,
+  	year      	= 2001,
+  	url       	= {http://vision.ece.ucsb.edu/publications/01IEEEManjunath.pdf}
 }
 
 @Inproceedings{vertan:fuzzy_histograms,
-	author =	{Vertan, C. and Boujemaa, N.},
-	title =		{Using Fuzzy Histograms and Distances for Color Image Retrieval},
-	booktitle =	{Challenge of Image Retrieval},
-	year =		2000,
-	address =	{Brighton}
+	author 		= {Vertan, C. and Boujemaa, N.},
+	title 		= {Using Fuzzy Histograms and Distances for Color Image Retrieval},
+	booktitle 	= {Challenge of Image Retrieval},
+	year 		= 2000,
+	address 	= {Brighton},
+}
+
+@Inproceedings{vertan:embedding_fuzzy_logic_in_cbir,
+   	author 		= {Vertan, C. and Boujemaa, N.},
+  	title 		= {Embedding Fuzzy Logic in Content Based Image Retrieval},
+  	booktitle 	= {International Conference of the North American Fuzzy Information Processing Society (NAFIPS)}, 
+    pages		= {85--89}, 
+    month		= jul,
+    year		= 2000,
 }
  
 @Article{smeulders:cbir_end_of_early_years,
-  author    = {Smeulders, A. W. M. and Worring, M. and Santini, S. and Gupta, A. and Jain, R.},
-  title     = {Content-Based Image Retrieval at the End of the Early Years},
-  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  volume    = {22},
-  number    = {12},
-  pages     = {1349--1380},
-  month     = dec,
-  year      = 2000,
+  	author    	= {Smeulders, A. W. M. and Worring, M. and Santini, S. and Gupta, A. and Jain, R.},
+  	title     	= {Content-Based Image Retrieval at the End of the Early Years},
+  	journal   	= {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  	volume    	= {22},
+  	number    	= {12},
+  	pages     	= {1349--1380},
+  	month     	= dec,
+  	year     	= 2000,
 }
 
 @Article{sharma:digital_color_imaging,
-  author    = {Sharma, G. and Trussell, H. G.},
-  title     = {Digital Color Imaging},
-  journal   = {IEEE Transactions on Image Processing},
-  volume    = {6},
-  number    = {7},
-  pages     = {901--932},
-  month     = jul,
-  year      = 1997,
+  	author    	= {Sharma, G. and Trussell, H. G.},
+  	title     	= {Digital Color Imaging},
+  	journal   	= {IEEE Transactions on Image Processing},
+  	volume    	= {6},
+  	number    	= {7},
+  	pages     	= {901--932},
+  	month     	= jul,
+  	year      	= 1997,
 }
 
 @Article{wang:cbir_using_daubechies_wavelets,
-    author = {Wang, J. Z. and Wiederhold, G. and Firschein, O. and Wei, S. X.},
-    title = {Content-Based Image Indexing and Searching Using Daubechies' Wavelets},
-    journal = {International Journal on Digital Libraries},
-    volume = {1},
-    number = {4},
-    pages = {311--328},
-    year = 1997,
+	author 		= {Wang, J. Z. and Wiederhold, G. and Firschein, O. and Wei, S. X.},
+	title 		= {Content-Based Image Indexing and Searching Using Daubechies' Wavelets},
+	journal 	= {International Journal on Digital Libraries},
+	volume 		= 1,
+	number 		= 4,
+	pages 		= {311--328},
+	year 		= 1997,
 }
 
 @Article{ohta:color_info_for_region_segm,
-   author = {Ohta, Y. and Kanade, T. and Sakai, T.},
-   title = {Color Information for Region Segmentation},
-   journal = {Computer Graphics and Image Processing},
-   month = jul,
-   year = 1980,
-   volume = {13},
-   number = {3},
-   pages = {222--241},
+   	author 		= {Ohta, Y. and Kanade, T. and Sakai, T.},
+   	title 		= {Color Information for Region Segmentation},
+   	journal 	= {Computer Graphics and Image Processing},
+   	month 		= jul,
+   	year 		= 1980,
+   	volume 		= {13},
+   	number 		= {3},
+   	pages 		= {222--241},
 }
 
 @Inproceedings{tkalcic:colour_spaces,
-   author = {Tkalcic, M. and Tasic, J. F.},
-   title = {Colour spaces: perceptual, historical and applicational background},
-   Year = 2003,
-	Booktitle = {Eurocon 2003 Proceedings},
-	Editor = {Zajc, B. and Tkalcic, M.},
-	Month = sep,
-	Organization = {IEEE Region 8},
+   	author 		= {Tkalcic, M. and Tasic, J. F.},
+   	title 		= {Colour spaces: perceptual, historical and applicational background},
+   	year 		= 2003,
+	booktitle 	= {Eurocon 2003 Proceedings},
+	editor 		= {Zajc, B. and Tkalcic, M.},
+	month 		= sep,
 }
+
+@Article{dekker:neuquant,
+   	author 		= {Dekker, A.},
+   	title 		= {Kohonen Neural Networks for Optimal Colour Quantization},
+   	journal 	= {Network: Computation in Neural Systems},
+   	month 		= aug,
+   	year 		= 1994,
+   	volume 		= {5},
+   	number 		= {3},
+   	pages 		= {351--367},
+}
+
+@Article{berens:compressed_colour_histograms,
+   	author 		= {Berens, J. and Finlayson, G. D. and Qiu, G.},
+   	title 		= {Image indexing using compressed colour histograms},
+   	journal 	= {IEE Proceedings: Vision, Image and Signal Processing},
+   	month 		= aug,
+   	year 		= 2000,
+   	volume 		= {147},
+   	number 		= {5},
+}
+
+@Inproceedings{sural:perceptually_smooth_histogram,
+   	author 		= {Sural, S. and Qian, G. and Pramanik, S.},
+   	title 		= {A Histogram with Perceptually Smooth Color Transition for Image Retrieval},
+   	year 		= 2002,
+	booktitle 	= {International Conference on Computer Vision, Pattern Recognition and Image Processing (CVPRIP)},
+	month 		= mar,
+	pages		= {664--667},
+}
+
