--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -8,6 +8,8 @@
 \usepackage{url}
 \usepackage{subfigure}
 \usepackage{array}
+\usepackage{algorithmic}
+\usepackage{multicol}
 
 \usepackage{scriptie}
 
